--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Comunidades nativas/infracciones/inciso_b.cshtml
@@ -40,7 +40,7 @@
 <p class="enumeration">
     Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° ${informe.ANTECEDENTES_DOCS.Carta.numero || '00XX-202X-OSINFOR/08.2.X'} de fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, ingresado con fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto || 'xx de xxxxx de 202X'} (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -48,7 +48,7 @@
 <p class="enumeration">
     En ese sentido, la Autoridad Instructora realizó el análisis correspondiente al Expediente Administrativo, así como de los documentos mencionados precedentemente, concluyendo lo siguiente:
 </p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         “(…)xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx (…)”.
     </li>
@@ -56,13 +56,13 @@
 <p class="enumeration">
     Al respecto, mediante escrito N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || '00XX-202X-OSINFOR/08.2.X'} con SITD N° xxxxxxx de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
 <p class="enumeration">Respecto a lo señalado por el/la administrado (a); se advierte el siguiente análisis:</p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
@@ -81,7 +81,7 @@
     En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
 </p>
 {{/if}}
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         El literal b) del artículo 153 de la Ley N° 29763, Ley Forestal y de Fauna Silvestre, de modo concordante con el literal b) del artículo 30 del RGFFSCNCC constituye una causal de caducidad, la extracción o movilización de recursos forestales no autorizados, lo que ha ocurrido en el presente caso, conforme a lo analizado en los numerales XX al XX de la presente resolución.
     </li>
@@ -146,7 +146,7 @@
 <p>
     En ese sentido, si bien se ha verificado que dos de las cuatro condiciones para declarar la caducidad no se cumplen, se debe considerar que los “Criterios para la declaración de caducidad del título habilitante en el Procedimiento Administrativo Único del OSINFOR”, vigente, posibilitan la declaratoria de caducidad se ocurren los supuestos a) (infracción muy grave) y d) (riesgo en la continuidad del TH), lo que en el presente caso se justifica debido a que el título habilitante solo ha sido utilizado para legalizar productos obtenidos ilegalmente, sin que exista en el área inversión para el cuidado y manejo de los bosques.
 </p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         Es en base a lo expuesto precedentemente, se ha establecido que el/la administrado (a) se encuentra incursa en la causal de caducidad previamente señalada.
     </li>
