--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_11.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_11.cshtml
@@ -35,7 +35,7 @@
 <p class="enumeration">
     Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° ${informe.ANTECEDENTES_DOCS.Carta.numero || '00XX-202X-OSINFOR/08.2.X'} de fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, ingresado con fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto || 'xx de xxxxx de 202X'} (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -43,7 +43,7 @@
 <p class="enumeration">
     En ese sentido, la Autoridad Instructora realizó el análisis correspondiente al Expediente Administrativo, así como de los documentos mencionados precedentemente, concluyendo lo siguiente:
 </p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         “(…)xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx (…)”.
     </li>
@@ -51,13 +51,13 @@
 <p class="enumeration">
     Al respecto, mediante escrito N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || '00XX-202X-OSINFOR/08.2.X'} con SITD N° xxxxxxx de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
 <p class="enumeration">Respecto a lo señalado por el/la administrado (a); se advierte el siguiente análisis:</p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
@@ -73,7 +73,7 @@
     La Autoridad Instructora, concluyó que existen elementos suficientes que permitieron mantener la imputación atribuida al/la administrado (a); respecto de lo cual el/la administrado (a) <u>no presentó descargos a lo señalado en el Informe Final de Instrucción.</u>
 </p>
 {{/if}}
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         Con fecha ${informe.ANTECEDENTES_DOCS.ILEGAL.fechaNotificacionTexto || 'xx de xxxxx de 202X'} se aprobó la xxxx en favor del/de la administrado (a)
         <a style="mso-footnote-id: foot_infraccion_11_1" href="#_foot_infraccion_11_1" title="">
