--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Fauna/infracciones/inciso_34.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Fauna/infracciones/inciso_34.cshtml
@@ -37,7 +37,7 @@
 <p class="enumeration">
     Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° ${informe.ANTECEDENTES_DOCS.Carta.numero || '00XX-202X-OSINFOR/08.2.X'} de fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, ingresado con fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto || 'xx de xxxxx de 202X'} (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -45,7 +45,7 @@
 <p class="enumeration">
     En ese sentido, la Autoridad Instructora realizó el análisis correspondiente al Expediente Administrativo, así como de los documentos mencionados precedentemente, concluyendo lo siguiente:
 </p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         “(…)xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx (…)”.
     </li>
@@ -53,13 +53,13 @@
 <p class="enumeration">
     Al respecto, mediante escrito N° xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
 <p class="enumeration">Respecto a lo señalado por el/la administrado (a); se advierte el siguiente análisis:</p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
@@ -78,19 +78,19 @@
 <p class="enumeration">
     En ese sentido, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
 </p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         Con fecha <strong>xxx</strong>, el/la administrado (a) y el Ing. XX suscribieron el Contrato de Regencia Forestal, el cual <strong>solo considera los servicios del Regente Forestal para la elaboración del xxxxx</strong>, tal como se observa a continuación:
     </li>
 </ul>
 <p style="text-align: center; font-size: 9pt;"><strong>Consignar Imagen<br />Fuente: Contrato de Regencia de fecha …</strong></p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         El PM aprobado mediante la Resolución XX, tiene vigencia hasta XX. Asimismo, de la revisión de xxxxxxx, se advierte que la xxxxxxx se realizó el 2XX, conforme se aprecia del siguiente gráfico:
     </li>
 </ul>
 <p style="text-align: center; font-size: 9pt;"><strong>Gráfico 01.</strong> Línea de tiempo</p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         En efecto, el/la administrado (a) implementó el Plan de Manejo xxxxxx, sin embargo, <strong>no contó con regente forestal entre las fechas xx de xxx de xx al xx de xxx de xxx</strong>, fechas en las que efectúo la implementación del plan de manejo.
     </li>
