--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Fauna/infracciones/inciso_7.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Fauna/infracciones/inciso_7.cshtml
@@ -38,7 +38,7 @@
 <p class="enumeration">
     Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° ${informe.ANTECEDENTES_DOCS.Carta.numero || '00XX-202X-OSINFOR/08.2.X'} de fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaNotificacionTexto || 'xx de xxxxx de 202X'}, ingresado con fecha ${informe.ANTECEDENTES_DOCS.Carta.fechaEmisionTexto || 'xx de xxxxx de 202X'} (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
@@ -46,7 +46,7 @@
 <p class="enumeration">
     En ese sentido, la Autoridad Instructora realizó el análisis correspondiente al Expediente Administrativo, así como de los documentos mencionados precedentemente, concluyendo lo siguiente:
 </p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         “(…)xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx (…)”.
     </li>
@@ -54,13 +54,13 @@
 <p class="enumeration">
     Mediante Escrito ${informe.ANTECEDENTES_DOCS.Escrito.numero || '00XX-202X-OSINFOR/08.2.X'} de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaEmisionTexto || 'xx de xxxxx de 202X'} con Registro XX, el/la administrado presentó sus descargos al informe final de instrucción, donde se advierte los siguientes argumentos:
 </p>
-<ol style="list-style-type: lower-alpha">
+<ol style="list-style-type: lower-alpha; margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
 <p class="enumeration">Respecto a lo señalado por el titular, se advierte el siguiente análisis:</p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
@@ -77,7 +77,7 @@
 <p class="enumeration">
     En ese sentido, en el presente caso, de acuerdo a la documentación que obra en el expediente administrativo, se advierte lo siguiente:
 </p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         Mediante Oficio N°xxx de fecha xx de xx de xxxx la ARFFS remitió información sobre los documentos de gestión del xxxxxxxx
     </li>
@@ -86,7 +86,7 @@
     </li>
 </ul>
 <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         De lo analizado, el titular no alberga especímenes de fauna silvestre dentro del área que forma parte del título habilitante y no se cuenta con documentación que acredite que comunicó, en su momento a la ARFFS ni al OSINFOR, el egreso de un total xxxxxx  (xxx) especímenes que albergaba, entre ejemplares del xxxxxxxxxxxx respecto de los cuales no se habría reportado el egreso, conforme se aprecia del siguiente cuadro:
     </li>
@@ -99,7 +99,7 @@
 </ul>
 <p style="text-align: center;"><strong>Adjuntar imagen</strong></p>
 <p style="text-align: center; font-size: 8pt;"><strong>Fuente: Elaboración propia en base al xxxxxxxxxx</strong></p>
-<ul>
+<ul style="margin-left: ${informe.MARGIN_LEFT.LEVEL_3};">
     <li>
         Finalmente, a pesar de que el RISMFFS señala que la infracción analizada es subsanable, la misma que se efectúa dentro del plazo previsto para la presentación de los descargos en la fase instructora, el/la administrado (a) no realizó la subsanación correspondiente, a pesar de haberse informado mediante xxxxxx.
     </li>
