Obtener resumen de IFI Digital

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/_tmplRDInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/_tmplRDInforme.cshtml
@@ -323,7 +323,7 @@
             “(…) Al respecto, mediante la Resolución Sub Directoral N° xxxxxxxxxxxxxxxxxxxx de fecha xx de xxxxx de 2023, se dispuso incluir como presunta responsable solidaria de la administrada en el presente PAU, a la empresa xxxxxxxxxxxxxxxxxx identificada con RUC N° xxxxxxxxxxxxxxxxxxxxx, toda vez que:
         </i>
     </p>
-    <ul>
+    <ul style="margin-left: ${MARGIN_LEFT.LEVEL_3};">
         <li>
             El artículo 83 de la Ley Forestal y de Fauna Silvestre, Ley N° 29763, dispone en su tercer párrafo que los terceros que realicen aprovechamiento forestal en tierras comunales son responsables solidarios con las comunidades nativas o campesinas por el debido cumplimiento de la legislación forestal y de fauna silvestre.
         </li>
@@ -467,7 +467,7 @@
     <p class="enumeration">
         Se debe señalar que mediante la Resolución Sub Directoral N° xxxx de fecha xxxx, se dispusieron medidas cautelares, conforme al siguiente detalle:
     </p>
-    <ul>
+    <ul style="margin-left: ${MARGIN_LEFT.LEVEL_3};">
         <li>
             Suspender los efectos de la DEMA/PO, aprobada mediante la xxxx, de fecha xxxx, que resuelve aprobar el xxx, a favor de xxxxxx, correspondiente al Permiso xxxxxx; así como, suspender la autorización de eventuales reingresos y/o movilizaciones de saldos vinculados con el citado permiso.
         </li>
